[gd_scene load_steps=7 format=2]

[ext_resource path="res://Textures/Hacking/Tablet.png" type="Texture" id=1]
[ext_resource path="res://HUD/ThemeBig.tres" type="Theme" id=2]
[ext_resource path="res://HUD/Button.tres" type="Theme" id=3]
[ext_resource path="res://Hacking/HackingGame.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hacking/HackingTerminal.gd" type="Script" id=5]
[ext_resource path="res://HUD/Theme.tres" type="Theme" id=6]

[node name="HackingTerminal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HackingGame" parent="." instance=ExtResource( 4 )]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -373.0
margin_right = 938.0
margin_bottom = 373.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -223.5
margin_top = 96.0
margin_right = 223.5
margin_bottom = 182.0
theme = ExtResource( 2 )
text = "Access Controls"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeniedText" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -295.0
margin_top = 608.0
margin_right = 146.0
margin_bottom = 679.0
theme = ExtResource( 6 )
text = "Access: Denied"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.5
margin_top = -127.0
margin_right = 198.5
margin_bottom = 127.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="TextureRect/VBoxContainer"]
margin_right = 397.0
margin_bottom = 58.0
theme = ExtResource( 3 )
text = "Something"

[node name="Button2" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 98.0
margin_right = 397.0
margin_bottom = 156.0
theme = ExtResource( 3 )
text = "Something else"

[node name="Button3" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 196.0
margin_right = 397.0
margin_bottom = 254.0
theme = ExtResource( 3 )
text = "perhaps a third thing"

[node name="ExitButton" type="Button" parent="TextureRect"]
margin_left = 656.0
margin_top = 599.0
margin_right = 821.0
margin_bottom = 672.0
theme = ExtResource( 3 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="successful_hack" from="HackingGame" to="." method="_on_successful_hack"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Button1" to="." method="_on_Button_pressed" binds= [ 1 ]]
[connection signal="pressed" from="TextureRect/VBoxContainer/Button2" to="." method="_on_Button_pressed" binds= [ 2 ]]
[connection signal="pressed" from="TextureRect/VBoxContainer/Button3" to="." method="_on_Button_pressed" binds= [ 3 ]]
[connection signal="pressed" from="TextureRect/ExitButton" to="." method="_on_ExitButton_pressed"]
